tests/expected_invalid_public_fails_private_reason.diag.out
<input>:6:30: error: public API cannot reference private type 'Failure'
    public fn run() -> Int fails Failure { 0 }
                                 ^^^^^^^
